--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="hero-inner">
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0">Zry Lab | 官方网站</h1>
-	                        <p class="hero-paragraph">我们是 Zry Lab 我们有:稳定, 暴力的配置，方便快捷，简洁UI的工具箱，就在SMCT Studio！吊打各种圈钱 蹭热度配置，给你带来良好的国服体验</p>
+	                        <p class="hero-paragraph">我们是 Zry Lab 我们有:稳定, 暴力的配置，方便快捷，简洁UI的工具箱，就在Zry Lab！吊打各种圈钱 蹭热度配置，给你带来良好的国服体验</p>
 	                        <div class="hero-cta"><a class="button button-primary" href="https://jq.qq.com/?_wv=1027&k=53FAO3o">点我进群</a><a class="button" href="https://smallcat.maikama.cn">去往小卖部</a></div>
 						</div>
 						<div class="hero-figure anime-element">
