--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                             <a href="https://jq.qq.com/?_wv=1027&k=53FAO3o">加入我们</a>
                         </li>
 			    <li>
-                            <a href="https://smctlab.github.io/freeid/">免费帐号</a>
+                            <a href="https://zrylab.github.io/freeid/">免费帐号</a>
 				    </li>
                     </ul>
                     <ul class="footer-social-links list-reset">
