--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 										<div class="pricing-table-features-title text-xs pt-24 pb-24">我们拥有：</div>
                                         <ul class="pricing-table-features list-reset text-xs">
                                             <li>
-                                                <span>简洁UI方便好用的Bater ToolBox</span>
+                                                <span>简洁UI方便好用的Zry ToolBox</span>
                                             </li>
                                             <li>
                                                 <span>暴力的国服配置</span>
