--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                         </ul>
                                     </div>
                                     <div class="pricing-table-cta mb-8">
-                                        <a class="button button-primary button-shadow button-block" href="http://insider.maikama.cn">购买猫猫的内部</a>
+                                        <a class="button button-primary button-shadow button-block" href="http://insider.maikama.cn">购买Zry内部</a>
                                     </div>
                                 </div>
                             </div>
