--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	                        <p class="hero-paragraph">我们是 Zry Lab</p>
                                 <p class="hero-paragraph">稳定, 暴力的配置，方便快捷，简洁UI的工具箱，就在Zry Lab！</p>
                                 <p class="hero-paragraph">吊打各种圈钱 蹭热度配置，给你带来良好的国服体验。</p>
-	                        <div class="hero-cta"><a class="button button-primary" href="https://jq.qq.com/?_wv=1027&k=53FAO3o">点我进群</a><a class="button" href="https://smallcat.maikama.cn">去往小卖部</a></div><a class="button button-primary" href="https://talents.maikama.cn/">点我Ts</a>
+	                        <div class="hero-cta"><a class="button button-primary" href="https://jq.qq.com/?_wv=1027&k=53FAO3o">点我进群</a><a class="button" href="https://smallcat.maikama.cn">去往小卖部</a></div><a class="button button-primary" href="https://talents.maikama.cn/">TALENTS</a>
 						</div>
 						<div class="hero-figure anime-element">
 							<svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
