--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Zry Lab | 官方网站 | Hello World !</h1>
+	                        <h1 class="hero-title mt-0">Zry Lab 官方网站</h1>
 	                        <p class="hero-paragraph">我们是 Zry Lab</p>
                                 <p class="hero-paragraph">我们有稳定，暴力的配置，方便快捷，简洁美观的工具箱</p>
                                 <p class="hero-paragraph">我们吊打各种圈钱 蹭热度配置，给你带来良好的国服体验</p>
