--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	                        <p class="hero-paragraph">我们是 Zry Lab</p>
                                 <p class="hero-paragraph">我们有稳定，暴力的配置，方便快捷，简洁美观的工具箱</p>
                                 <p class="hero-paragraph">我们吊打各种圈钱 蹭热度配置，给你带来良好的国服体验</p>
-	                        <div class="hero-cta"><a class="button button-primary" href="https://jq.qq.com/?_wv=1027&k=53FAO3o">点我进群</a><a class="button" href="https://smallcat.maikama.cn">去往小卖部</a></div>
+	                        <div class="hero-cta"><a class="button button-primary" href="https://jq.qq.com/?_wv=1027&k=53FAO3o">点我进群</a><a class="button" href="http://smallcat.maikama.cn">去往小卖部</a></div>
 						</div>
 						<div class="hero-figure anime-element">
 							<svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
@@ -136,7 +136,7 @@
 										<div class="pricing-table-features-title text-xs pt-24 pb-24">我们拥有：</div>
                                         <ul class="pricing-table-features list-reset text-xs">
                                             <li>
-                                                <span>简洁UI方便好用的Bater ToolBox</span>
+                                                <span>简洁美观方便好用的Zrh ToolBox</span>
                                             </li>
                                             <li>
                                                 <span>暴力的国服配置</span>
@@ -208,7 +208,7 @@
 					<div class="cta-inner section-inner">
 						<h3 class="section-title mt-0">购买更多低价优质资源</h3>
 						<div class="cta-cta">
-							<a class="button button-primary button-wide-mobile" href="https://smallcat.maikama.cn">进入小卖部</a>
+							<a class="button button-primary button-wide-mobile" href="http://smallcat.maikama.cn">进入小卖部</a>
 						</div>
 					</div>
 				</div>
@@ -231,7 +231,7 @@
                             <a href="https://discord.gg/EzgSuc9">Discord</a>
                         </li>
                         <li>
-                            <a href="https://smallcat.maikama.cn">小卖部</a>
+                            <a href="http://smallcat.maikama.cn">小卖部</a>
                         </li>
                         <li>
                             <a href="https://jq.qq.com/?_wv=1027&k=53FAO3o">加入我们</a>
