--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										<img src="images/feature-icon-03.svg" alt="Feature 03">
                                     </div>
                                     <h4 class="feature-title mt-24">很皮的团队</h4>
-                                    <p class="text-sm mb-0">我们有10多个团队成员，如想加入团队，请联系QQ2476221288</p>
+                                    <p class="text-sm mb-0">我们有很可爱团队成员，如想加入团队，请联系QQ2476221288</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
