--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	                        <p class="hero-paragraph">我们是 Zry Lab</p>
                                 <p class="hero-paragraph">我们有稳定，暴力的配置，方便快捷，简洁美观的工具箱</p>
                                 <p class="hero-paragraph">我们吊打各种圈钱 蹭热度配置，给你带来良好的国服体验</p>
-	                        <div class="hero-cta"><a class="button button-primary" href="group">点我进群</a><a class="button" href="http://smallcat.maikama.cn">去往小卖部</a></div>
+	                        <div class="hero-cta"><a class="button button-primary" href="https://zrylab.github.io/group">点我进群</a><a class="button" href="http://smallcat.maikama.cn">去往小卖部</a></div>
 						</div>
 						<div class="hero-figure anime-element">
 							<svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
@@ -124,7 +124,7 @@
 					<div class="cta-inner section-inner">
 						<h3 class="section-title mt-0">我们的团队</h3>
 						<div class="cta-cta">
-							<a class="button button-primary button-wide-mobile" href="team">了解更多</a>
+							<a class="button button-primary button-wide-mobile" href="https://zrylab.github.io/team">了解更多</a>
 						</div>
 					</div>
 				</div>
@@ -244,7 +244,7 @@
                             <a href="http://smallcat.maikama.cn">小卖部</a>
                         </li>
                         <li>
-                            <a href="group">加入我们</a>
+                            <a href="https://zrylab.github.io/group">加入我们</a>
                         </li>
                     </ul>
                     <ul class="footer-social-links list-reset">
