--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	                        <p class="hero-paragraph">我们是 Zry Lab</p>
                                 <p class="hero-paragraph">我们有稳定，暴力的配置，方便快捷，简洁美观的工具箱</p>
                                 <p class="hero-paragraph">我们吊打各种圈钱 蹭热度配置，给你带来良好的国服体验</p>
-	                        <div class="hero-cta"><a class="button button-primary" href="https://zrylab.github.io/group">点我进群</a><a class="button" href="http://smallcat.maikama.cn">去往小卖部</a></div>
+	                        <div class="hero-cta"><a class="button button-primary" href="https://zrylab.github.io/group">点我进群</a><a class="button" href="http://smallcat.maikama.cn">去往商店</a></div>
 						</div>
 						<div class="hero-figure anime-element">
 							<svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
@@ -241,7 +241,7 @@
                             <a href="https://discord.gg/EzgSuc9">Discord</a>
                         </li>
                         <li>
-                            <a href="http://smallcat.maikama.cn">小卖部</a>
+                            <a href="http://smallcat.maikama.cn">商店</a>
                         </li>
                         <li>
                             <a href="https://zrylab.github.io/group">加入我们</a>
