--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 					<div class="cta-inner section-inner">
 						<h3 class="section-title mt-0">购买更多低价优质资源</h3>
 						<div class="cta-cta">
-							<a class="button button-primary button-wide-mobile" href="http://smallcat.maikama.cn">进入小卖部</a>
+							<a class="button button-primary button-wide-mobile" href="http://smallcat.maikama.cn">进入商店</a>
 						</div>
 					</div>
 				</div>
