--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                 <div class="pricing-table-inner is-revealing">
                                     <div class="pricing-table-main">
                                         <div class="pricing-table-header pb-24">
-                                            <div class="pricing-table-price"><span class="pricing-table-price-currency h2">￥</span><span class="pricing-table-price-amount h1">18</span><span class="text-xs">/永久/推荐购买</span></div>
+                                            <div class="pricing-table-price"><span class="pricing-table-price-currency h2">￥</span><span class="pricing-table-price-amount h1">8</span><span class="text-xs">/预售/推荐购买/正式版价格18￥</span></div>
                                         </div>
 										<div class="pricing-table-features-title text-xs pt-24 pb-24">我们拥有：</div>
                                         <ul class="pricing-table-features list-reset text-xs">
